# beancount-plugins

./: CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml
beancount_plugins/: __init__.py  check_missing_links.py  check_missing_tags.py  check_valid_metadata.py  check_valid_tags.py  posting_tags.py  promote_account_metadata.py  zerosum_transaction_matcher.py
docs/superpowers/plans/: 2026-07-03-promote-account-metadata.md
docs/superpowers/specs/: 2026-07-03-promote-account-metadata-design.md
examples/: metadata_schema.yaml  tags.yaml  test_validation.bean
tests/: metadata_schema.yaml  sample.beancount  tags.yaml  test_plugins.py  test_promote_account_metadata.py
